# SmartPhone-dev

./: .gitignore  CMakeLists.txt  README.md  command.cpp  command.h  commands_list.h  main.cpp  serial.cpp
.github/workflows/: cmake.yml  rpi.yml
Inc/: 7bitdecoder.h  cli.h  command.h  contact.h  decoder.h  logging.h  logging.hpp  modem.h  screen.h  serial.h
Inc/cli/: cli.h  cli.hpp  color_print.h  colors.hpp  modem_controller.hpp  ncurses_io.h  ncurses_io.hpp  ncurses_utils.hpp  option.h  option.hpp  readline_utils.hpp  screen.h  screen.hpp
Inc/cli/definitions/: cli_macros.hpp
Inc/cli/utils/: assertions.hpp  cli_utils.hpp  ncurses_utils.hpp
Inc/cli/utils/io/: ncurses_io.hpp
Inc/command/: command.h  command.hpp  commands_list.hpp
Inc/modem/: cache_manager.hpp  media_types.hpp  modem.h  modem.hpp  serial.h  serial.hpp
Inc/modem/command/: command.hpp
Inc/modem/utils/: cache_manager.hpp
Inc/rotary_reader/: rotary_dial.h  rotary_dial.hpp
Src/: 7bitdecoder.cpp  cli.cpp  command.cpp  decoder.cpp  logging.cpp  modem.cpp  screen.cpp  serial.cpp
Src/cli/: cli.cpp  color_print.cpp  modem_controller.cpp  ncurses_io.cpp  ncurses_utils.cpp  option.cpp  readline_utils.cpp  screen.cpp  screens_init.cpp
Src/cli/operations/: modem_operations.cpp  screen_operations.cpp
Src/cli/utils/: assertions.cpp  cli_handlers.cpp  cli_utils.cpp  consoles.cpp  ncurses_utils.cpp
Src/cli/utils/io/: ncurses_io.cpp  readline_utils.cpp
Src/cli/utils/ncurses/: ncurses_io.cpp  ncurses_utils.cpp
Src/cli/utils/readline/: readline_utils.cpp
Src/command/: command.cpp
Src/modem/: cache_manager.cpp  handlers.cpp  media_types.cpp  modem.cpp  modem_handlers.cpp  modem_utils.cpp  serial.cpp
Src/modem/command/: command.cpp
Src/modem/utils/: cache_manager.cpp  decoder.cpp  modem_handlers.cpp  modem_utils.cpp
Src/rotary_reader/: rotary_dial.cpp
assets/: at_commands.txt
cache/: .gitignore
cache/logs/: .gitignore
logs/: log.txt
module_cache/: contacts.txt
